# mcc-validate

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
github-action/: README.md  action.yml
src/mcc_validate/: __init__.py  cli.py  config.py  models.py
src/mcc_validate/core/: __init__.py  change_classifier.py  composition_checker.py  diff_engine.py  expiry_checker.py  hash_verifier.py  schema_validator.py  signature_verifier.py  tier_checker.py
src/mcc_validate/reporters/: console_reporter.py  html_reporter.py  json_reporter.py  sarif_reporter.py
src/mcc_validate/schemas/: mcc-context-v1.jsonld  mcc-schema-v1.json
src/mcc_validate/web/: __init__.py  app.py
tests/: conftest.py  test_change_classifier.py  test_ci_flag.py  test_cli.py  test_composition_checker.py  test_config.py  test_diff_engine.py  test_expiry_checker.py  test_github_action.py  test_hash_verifier.py  test_html_reporter.py  test_pre_commit.py  test_sarif_reporter.py  test_schema_validator.py  test_signature_verifier.py  test_tier_checker.py  test_validate_certificate.py  test_web.py
tests/fixtures/: composite_system.json  invalid_missing_fields.json  invalid_tier_mismatch.json  valid_tier1.json  valid_tier3.json
tests/fixtures/components/: comp-guard-001.json  comp-img-001.json  comp-model-001.json
